# Rebyte

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  mutants.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/rebyte-apply/: Cargo.toml
crates/rebyte-apply/src/: lib.rs
crates/rebyte-artifact-token/: Cargo.toml
crates/rebyte-artifact-token/src/: codec.rs  error.rs  lib.rs  model.rs
crates/rebyte-artifact-token/src/codec/: stream.rs
crates/rebyte-artifact-token/tests/: vectors.rs
crates/rebyte-chain/: Cargo.toml
crates/rebyte-chain/src/: backup.rs  ceremony.rs  challenge.rs  codec.rs  envelope.rs  error.rs  group.rs  identity.rs  lib.rs  release.rs  secret_sharing.rs  status.rs  vector_tests.rs
crates/rebyte-chain/src/vectors/: challenge-envelope-v1.token
crates/rebyte-cli/: Cargo.toml
crates/rebyte-cli/src/: artifact_command.rs  chain_command.rs  file_token_command.rs  fingerprint.rs  hardening.rs  hash_command.rs  keys.rs  main.rs  producer.rs  release_ledger.rs  security_io.rs  semantic_command.rs  shell_env.rs  ui.rs
crates/rebyte-cli/tests/: apply_cli.rs  artifact_cli.rs  chain_cli.rs  file_token_cli.rs  production_cli.rs  semantic_cli.rs
crates/rebyte-codec/: Cargo.toml
crates/rebyte-codec/benches/: codec.rs
crates/rebyte-codec/src/: decode.rs  encode.rs  error.rs  lib.rs  model.rs  token.rs
crates/rebyte-codec/tests/: properties.rs
crates/rebyte-compression/: Cargo.toml
crates/rebyte-compression/src/: lib.rs
crates/rebyte-contract/: Cargo.toml
crates/rebyte-contract/src/: lib.rs
crates/rebyte-core/: Cargo.toml
crates/rebyte-core/src/: lib.rs
crates/rebyte-diff/: Cargo.toml
crates/rebyte-diff/src/: lib.rs
crates/rebyte-file-token/: Cargo.toml
crates/rebyte-file-token/src/: lib.rs
crates/rebyte-format/: Cargo.toml
crates/rebyte-format/src/: lib.rs  limits.rs  path.rs  types.rs
crates/rebyte-format/tests/: path_properties.rs
crates/rebyte-integrity/: Cargo.toml
crates/rebyte-integrity/src/: lib.rs
crates/rebyte-pack/: Cargo.toml
crates/rebyte-pack/src/: lib.rs
crates/rebyte-semantic/: Cargo.toml
crates/rebyte-semantic/src/: lib.rs
crates/rebyte-signature/: Cargo.toml
crates/rebyte-signature/src/: lib.rs
crates/rebyte-signer/: Cargo.toml
crates/rebyte-signer/src/: key_file.rs  lib.rs
crates/rebyte-verify/: Cargo.toml
crates/rebyte-verify/src/: lib.rs
crates/rebyte-wasm/: Cargo.toml
crates/rebyte-wasm/src/: lib.rs
docs/: architecture.md  chain-architecture.md  chain-operations.md  cli.md  concepts.md  flows.md  key-management.md  quality.md  release.md  security-model.md  security-review-2026-07.md  threat-model.md  use-cases.md
fuzz/: Cargo.toml
fuzz/corpus/decode_capsule/: bad-magic
fuzz/corpus/decode_file_token/: bad-prefix
fuzz/corpus/decode_token/: bad-prefix
fuzz/corpus/decompress/: truncated
fuzz/corpus/portable_path/: traversal
fuzz/fuzz_targets/: decode_artifact.rs  decode_capsule.rs  decode_chain_control.rs  decode_chain_envelope.rs  decode_file_token.rs  decode_token.rs  decompress.rs  portable_path.rs
schemas/: access-contract-v1.md  artifact-token-v1.md  chain-v1.md  chain-v2.md  challenge-v1.md  ephemeral-mesh-v1.md  file-token-v1.md  key-sequence-v1.md  rap-v1.abnf  rap-v1.md  semantic-patch-v1.md
schemas/test-vectors/v1/: README.md
schemas/test-vectors/v1/empty-file/: vector.json
schemas/test-vectors/v1/multiple-binary/: vector.json
schemas/test-vectors/v1/path-traversal/: vector.json
schemas/test-vectors/v1/single-text/: vector.json
schemas/test-vectors/v1/unicode/: vector.json
xtask/: Cargo.toml
xtask/src/: main.rs
