[workspace]
resolver = "3"
exclude = ["fuzz"]
members = [
    "crates/rebyte-format",
    "crates/rebyte-codec",
    "crates/rebyte-integrity",
    "crates/rebyte-compression",
    "crates/rebyte-artifact-token",
    "crates/rebyte-semantic",
    "crates/rebyte-contract",
    "crates/rebyte-chain",
    "crates/rebyte-signature",
    "crates/rebyte-pack",
    "crates/rebyte-verify",
    "crates/rebyte-diff",
    "crates/rebyte-apply",
    "crates/rebyte-wasm",
    "crates/rebyte-signer",
    "crates/rebyte-core",
    "crates/rebyte-cli",
    "xtask",
]

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc", "zeroize"] }
base64 = { version = "0.23", default-features = false, features = ["alloc"] }
blake3 = { version = "1.8", default-features = false }
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
subtle = { version = "2.6", default-features = false }
ruzstd = { version = "0.8", default-features = false, features = ["std"] }
zstd = { version = "0.13", default-features = false, features = ["zdict_builder"] }
ed25519-dalek = { version = "3.0", default-features = false, features = ["alloc", "zeroize"] }
cap-std = "4.0"
cap-fs-ext = "4.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.25", features = ["serde"] }
similar = "3.1"
tempfile = "3.27"
uuid = { version = "1.18", features = ["v4"] }
proptest = "1.9"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
zeroize = "1.8"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
getrandom = "0.4"
rpassword = "7.5"
rustix = { version = "1.1", default-features = false, features = ["process", "std"] }
hpke = { version = "0.14", default-features = false, features = ["alloc", "chacha", "getrandom", "x25519"] }
jiff = { version = "0.2.32", default-features = false, features = ["std"] }

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.97"
authors = ["Pedro Martins (pedro5g)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedro5g/Rebyte"
homepage = "https://github.com/pedro5g/Rebyte"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
multiple_crate_versions = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true

[profile.bench]
debug = true
