[package]
name = "xtask"
description = "Repository maintenance commands for Rebyte"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true
