[package]
name = "rebyte-artifact-token"
description = "Canonical unsigned Rebyte tokens for files and directory trees"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["archive", "compression", "integrity"]
categories = ["encoding", "compression", "filesystem"]

[dependencies]
base64.workspace = true
rebyte-compression = { path = "../rebyte-compression", version = "1.0.0" }
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-integrity = { path = "../rebyte-integrity", version = "1.0.0" }
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
