[package]
name = "rebyte-chain"
description = "Self-custodied group consensus and encrypted Rebyte artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["encryption", "consensus", "artifact", "security"]
categories = ["cryptography", "encoding"]

[dependencies]
argon2.workspace = true
subtle.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hpke.workspace = true
rebyte-artifact-token = { path = "../rebyte-artifact-token", version = "1.0.0" }
rebyte-contract = { path = "../rebyte-contract", version = "1.0.0" }
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-semantic = { path = "../rebyte-semantic", version = "1.0.0" }
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
