[package]
name = "rebyte-cli"
description = "Command-line interface for the Rebyte Artifact Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["artifact", "cli", "security"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rebyte"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
rebyte-codec = { path = "../rebyte-codec", version = "0.1.0" }
rebyte-core = { path = "../rebyte-core", version = "0.1.0" }
rebyte-format = { path = "../rebyte-format", version = "0.1.0" }
rebyte-signature = { path = "../rebyte-signature", version = "0.1.0" }
rebyte-verify = { path = "../rebyte-verify", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
