[package]
name = "rebyte-cli"
description = "Command-line interface for the Rebyte Artifact Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["artifact", "cli", "security"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rebyte"
path = "src/main.rs"

[dependencies]
base64.workspace = true
blake3.workspace = true
cap-fs-ext.workspace = true
cap-std.workspace = true
clap.workspace = true
clap_complete.workspace = true
jiff.workspace = true
rebyte-codec = { path = "../rebyte-codec", version = "1.0.0" }
rebyte-chain = { path = "../rebyte-chain", version = "1.0.0" }
rebyte-core = { path = "../rebyte-core", version = "1.0.0" }
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-integrity = { path = "../rebyte-integrity", version = "1.0.0" }
rebyte-pack = { path = "../rebyte-pack", version = "1.0.0" }
rebyte-signature = { path = "../rebyte-signature", version = "1.0.0" }
rebyte-signer = { path = "../rebyte-signer", version = "1.0.0" }
rebyte-verify = { path = "../rebyte-verify", version = "1.0.0" }
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
zeroize.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
rebyte-pack = { path = "../rebyte-pack", version = "1.0.0" }

[lints]
workspace = true
