[package]
name = "rebyte-core"
description = "Stable facade for packing, verifying and applying Rebyte capsules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["artifact", "capsule", "security"]
categories = ["filesystem", "encoding"]

[dependencies]
rebyte-format = { path = "../rebyte-format", version = "0.1.0" }

[lints]
workspace = true
