[package]
name = "rebyte-core"
description = "Stable facade for packing, verifying and applying Rebyte capsules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["artifact", "capsule", "security"]
categories = ["filesystem", "encoding"]

[dependencies]
rebyte-apply = { path = "../rebyte-apply", version = "1.0.0" }
rebyte-artifact-token = { path = "../rebyte-artifact-token", version = "1.0.0" }
rebyte-diff = { path = "../rebyte-diff", version = "1.0.0" }
rebyte-file-token = { path = "../rebyte-file-token", version = "1.0.0" }
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-pack = { path = "../rebyte-pack", version = "1.0.0" }
rebyte-semantic = { path = "../rebyte-semantic", version = "1.0.0" }
rebyte-signature = { path = "../rebyte-signature", version = "1.0.0" }
rebyte-verify = { path = "../rebyte-verify", version = "1.0.0" }

[lints]
workspace = true
