[package]
name = "rebyte-format"
description = "Protocol types for the Rebyte Artifact Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["artifact", "protocol", "security"]
categories = ["encoding", "no-std"]

[lints]
workspace = true
