[package]
name = "rebyte-signer"
description = "Restricted development signing adapters for Rebyte capsules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rebyte-signature = { path = "../rebyte-signature", version = "0.1.0" }
zeroize.workspace = true

[dev-dependencies]
rebyte-integrity = { path = "../rebyte-integrity", version = "0.1.0" }

[lints]
workspace = true
