[package]
name = "rebyte-signer"
description = "Encrypted local and restricted development signing adapters for Rebyte"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-integrity = { path = "../rebyte-integrity", version = "1.0.0" }
rebyte-signature = { path = "../rebyte-signature", version = "1.0.0" }
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
