[package]
name = "rebyte-verify"
description = "Typestate verification pipeline for Rebyte capsules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
rebyte-codec = { path = "../rebyte-codec", version = "1.0.0" }
rebyte-compression = { path = "../rebyte-compression", version = "1.0.0" }
rebyte-format = { path = "../rebyte-format", version = "1.0.0" }
rebyte-integrity = { path = "../rebyte-integrity", version = "1.0.0" }
rebyte-pack = { path = "../rebyte-pack", version = "1.0.0" }
rebyte-signature = { path = "../rebyte-signature", version = "1.0.0" }

[dev-dependencies]
ed25519-dalek.workspace = true

[lints]
workspace = true
